--- a/Lab04/index.html
+++ b/Lab04/index.html
@@ -15,16 +15,17 @@ var direction=90;
 var angleX = 0;
 var angleY = 0;
 var angleZ = 0;
-var tz = 0.0; //Przesuni꣩e w osi OZ
+var tz = 0.0; //Przesunięcie w osi OZ
 function startGL() 
 {
   alert("StartGL");
   let canvas = document.getElementById("canvas3D"); //wyszukanie obiektu w strukturze strony 
   gl = canvas.getContext("experimental-webgl"); //pobranie kontekstu OpenGL'u z obiektu canvas
-  gl.viewportWidth = canvas.width; //przypisanie wybranej przez nas rozdzielczoci do systemu OpenGL
+  gl.viewportWidth = canvas.width; //przypisanie wybranej przez nas rozdzielczości do systemu OpenGL
   gl.viewportHeight = canvas.height;
   
-    //Kod shader󷍊  const vertextShaderSource = ` //Znak akcentu z przycisku tyldy - na lewo od przycisku 1 na klawiaturze
+    //Kod shaderów
+	const vertextShaderSource = ` //Znak akcentu z przycisku tyldy - na lewo od przycisku 1 na klawiaturze
     precision highp float;
     attribute vec3 aVertexPosition; 
     attribute vec3 aVertexColor;
@@ -32,7 +33,7 @@ function startGL()
     uniform mat4 uPMatrix;
     varying vec3 vColor;
     void main(void) {
-      gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0); //Dokonanie transformacji po³o¿enia punkt󷠺 przestrzeni 3D do przestrzeni obrazu (2D)
+      gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0); //Dokonanie transformacji położenia punktów z przestrzeni 3D do przestrzeni obrazu (2D)
       vColor = aVertexColor;
     }
   `;
@@ -40,16 +41,16 @@ function startGL()
     precision highp float;
     varying vec3 vColor;
     void main(void) {
-      gl_FragColor = vec4(vColor,1.0); //Ustalenie sta³ego koloru wszystkich punkt󷠳ceny
+      gl_FragColor = vec4(vColor,1.0); //Ustalenie stałego koloru wszystkich punktów sceny
     }
   `;
   let fragmentShader = gl.createShader(gl.FRAGMENT_SHADER); //Stworzenie obiektu shadera 
   let vertexShader   = gl.createShader(gl.VERTEX_SHADER);
-  gl.shaderSource(fragmentShader, fragmentShaderSource); //Podpi꣩e r󤳡 kodu shader
+  gl.shaderSource(fragmentShader, fragmentShaderSource); //Podpięcie źródła kodu shader
   gl.shaderSource(vertexShader, vertextShaderSource);
   gl.compileShader(fragmentShader); //Kompilacja kodu shader
   gl.compileShader(vertexShader);
-  if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) { //Sprawdzenie ewentualnych b³ed󷠫ompilacji
+  if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) { //Sprawdzenie ewentualnych błedów kompilacji
     alert(gl.getShaderInfoLog(fragmentShader));
     return null;
   }
@@ -59,11 +60,12 @@ function startGL()
   }
   
   shaderProgram = gl.createProgram(); //Stworzenie obiektu programu 
-  gl.attachShader(shaderProgram, vertexShader); //Podpi꣩e obu shader󷠤o naszego programu wykonywanego na karcie graficznej
+  gl.attachShader(shaderProgram, vertexShader); //Podpięcie obu shaderów do naszego programu wykonywanego na karcie graficznej
   gl.attachShader(shaderProgram, fragmentShader);
   gl.linkProgram(shaderProgram);
-  if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) alert("Could not initialise shaders");  //Sprawdzenie ewentualnych b³ed󷍊  
-  //Opis sceny 3D, po³o¿enie punkt󷠷 przestrzeni 3D w formacie X,Y,Z 
+  if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) alert("Could not initialise shaders");  //Sprawdzenie ewentualnych błedów
+  
+  //Opis sceny 3D, położenie punktów w przestrzeni 3D w formacie X,Y,Z 
   let vertexPosition = [
   //podloga
     -200.0, -6, -200.0,  -0.0, -6, +0.0,  -200.0, -6, -0.0, 
@@ -159,10 +161,11 @@ function startGL()
   vertexPositionBuffer = gl.createBuffer(); //Stworzenie tablicy w pamieci karty graficznej
   gl.bindBuffer(gl.ARRAY_BUFFER, vertexPositionBuffer);
   gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertexPosition), gl.STATIC_DRAW);
-  vertexPositionBuffer.itemSize = 3; //zdefiniowanie liczby wsp󳲺ednych per wierzcho³ek
-  vertexPositionBuffer.numItems = 58; //Zdefinoiowanie liczby punkt󷠷 naszym buforze
+  vertexPositionBuffer.itemSize = 3; //zdefiniowanie liczby współrzednych per wierzchołek
+  vertexPositionBuffer.numItems = 58; //Zdefinoiowanie liczby punktów w naszym buforze
   
-  //Opis sceny 3D, kolor ka¿dego z wierzcho³k󷍊  let vertexColor = [
+  //Opis sceny 3D, kolor każdego z wierzchołków
+  let vertexColor = [
   //Top
     1.0, 0.5, 0.5,  1.0, 0.5, 0.5,  1.0, 0.5, 0.5, 
     1.0, 0.5, 0.5,  1.0, 0.5, 0.5,  1.0, 0.5, 0.5,
@@ -273,10 +276,10 @@ function startGL()
   vertexColorBuffer.numItems = 58;
   
   
-  //Macierze opisuj¹ce po³o¿enie wirtualnej kamery w przestrzenie 3D
+  //Macierze opisujące położenie wirtualnej kamery w przestrzenie 3D
   let aspect = gl.viewportWidth/gl.viewportHeight;
-  let fov = 80.0 * Math.PI / 180.0; //Okrelenie pola widzenia kamery
-  let zFar = 100.0; //Ustalenie zakres󷠲enderowania sceny 3D (od obiektu najbli¿szego zNear do najdalszego zFar)
+  let fov = 80.0 * Math.PI / 180.0; //Określenie pola widzenia kamery
+  let zFar = 100.0; //Ustalenie zakresów renderowania sceny 3D (od obiektu najbliższego zNear do najdalszego zFar)
   let zNear = 0.0;
   uPMatrix = [
    1.0/(aspect*Math.tan(fov/2)),0                           ,0                         ,0                            ,
@@ -291,7 +294,7 @@ function startGL()
 
 
 
-let angle = 0.0; //Macierz transformacji wiata - okrelenie po³o¿enia kamery 
+let angle = 0.0; //Macierz transformacji świata - określenie położenia kamery 
 
 function changeSize(m){
 n = new Array(16);  
@@ -305,7 +308,7 @@ var k = 0;
 return n;
 }
 
-function multiply(a,b) //Mno¿enie macierzy
+function multiply(a,b) //Mnożenie macierzy
 {
   c = [
   0,0,0,0,
@@ -428,24 +431,25 @@ let uMVMatrix = CreateMatrix(angleX,angleY,angleZ);
   //Render Scene
   gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight); 
   gl.clearColor(0.0,0.0,0.0,1.0); //Wyczyszczenie obrazu kolorem czerwonym
-  gl.clearDepth(1.0);             //Wyczycienie bufora g³ebi najdalszym planem
+  gl.clearDepth(1.0);             //Wyczyścienie bufora głebi najdalszym planem
   gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-  gl.useProgram(shaderProgram)   //U¿ycie przygotowanego programu shaderowego
+  gl.useProgram(shaderProgram)   //Użycie przygotowanego programu shaderowego
   
-  gl.enable(gl.DEPTH_TEST);           // W³¹czenie testu g³ꢩ - obiekty bli¿sze maj¹ przykrywa栯biekty dalsze
+  gl.enable(gl.DEPTH_TEST);           // Włączenie testu głębi - obiekty bliższe mają przykrywać obiekty dalsze
   gl.depthFunc(gl.LEQUAL);            // 
   
-  gl.uniformMatrix4fv(gl.getUniformLocation(shaderProgram, "uPMatrix"), false, new Float32Array(uPMatrix)); //Wgranie macierzy kamery do pami꣩ karty graficznej
+  gl.uniformMatrix4fv(gl.getUniformLocation(shaderProgram, "uPMatrix"), false, new Float32Array(uPMatrix)); //Wgranie macierzy kamery do pamięci karty graficznej
   gl.uniformMatrix4fv(gl.getUniformLocation(shaderProgram, "uMVMatrix"), false, new Float32Array(uMVMatrix));
   
-  gl.enableVertexAttribArray(gl.getAttribLocation(shaderProgram, "aVertexPosition"));  //Przekazanie po³o¿enia
+  gl.enableVertexAttribArray(gl.getAttribLocation(shaderProgram, "aVertexPosition"));  //Przekazanie położenia
   gl.bindBuffer(gl.ARRAY_BUFFER, vertexPositionBuffer);
   gl.vertexAttribPointer(gl.getAttribLocation(shaderProgram, "aVertexPosition"), vertexPositionBuffer.itemSize, gl.FLOAT, false, 0, 0);
   
-  gl.enableVertexAttribArray(gl.getAttribLocation(shaderProgram, "aVertexColor"));  //Przekazanie kolor󷍊  gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer);
+  gl.enableVertexAttribArray(gl.getAttribLocation(shaderProgram, "aVertexColor"));  //Przekazanie kolorów
+  gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer);
   gl.vertexAttribPointer(gl.getAttribLocation(shaderProgram, "aVertexColor"), vertexColorBuffer.itemSize, gl.FLOAT, false, 0, 0);
   
-  gl.drawArrays(gl.TRIANGLES, 0, vertexPositionBuffer.numItems*vertexPositionBuffer.itemSize); //Faktyczne wywo³anie rendrowania
+  gl.drawArrays(gl.TRIANGLES, 0, vertexPositionBuffer.numItems*vertexPositionBuffer.itemSize); //Faktyczne wywołanie rendrowania
    
   setTimeout(Tick,20);
 }
